fix responsive layout bug

--- a/app/assets/stylesheets/base/homepage.css.scss
+++ b/app/assets/stylesheets/base/homepage.css.scss
@@ -24,7 +24,7 @@
 }
 
 .heading_container {
-  line-height: 0.5em;
+  line-height: 1em;
   position: absolute;
   bottom: 3em;
   width: 100%;
